fix mobile view font too small

--- a/static/base.css
+++ b/static/base.css
@@ -33,7 +33,7 @@ h1 {
     text-align: center;
     background-color: var(--gray0);
     border-radius: var(--brad2);
-    padding: 1%
+    padding: 0 1%;
 }
 
 h2 {
